--- a/index.html
+++ b/index.html
@@ -49,30 +49,13 @@
               </div>
               <div class="col-md-8">
 
-              <p>Take me out tonight
-                Where there's music and there's people
-                And they're young and alive
-                Driving in your car
-                I never, never want to go home
-                Because I haven't got one
-                Anymore</p>
+              <p>Nama saya Faunita Raihan Dzahirah</p>
 
-                <p>Take me out tonight
-                  Because I want to see people
-                  And I want to see life
-                  Driving in your car
-                  Oh please, don't drop me home
-                  Because it's not my home, it's their home
-                  And I'm welcome no more</p>
+                <p>Saya adalah seorang Mahasiswa Institut Digital Ekonimi LPKIA Jurusan Sistem Informasi
+                  Saya adalah seorang yang sangat tertarik di Bidang Teknologi Informasi khusunya di Ilmu Pemrograman
+                </p>
 
-                  <p>And if a double-decker bus
-                    Crashes into us
-                    To die by your side
-                    Is such a heavenly way to die
-                    And if a ten tonne truck
-                    Kills the both of us
-                    To die by your side
-                    Well, the pleasure, the privilege is mine</p>
+                  <p>Saya juga adalah seorang yang bertanggung jawab dan disiplin dalam menjalankan tugas</p>
   
 
               </div>
